fixed scoring broken in previous commit

--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -49,7 +49,7 @@ footer {
 
 footer .footerElements {
   padding-left: 100px;
-  font-size: 1rem;
+  font-size: 1.3rem;
   text-align: left;
   line-height: 1.6rem;
   color: #000;
